--- a/build-tensor-pi/Dockerfile
+++ b/build-tensor-pi/Dockerfile
@@ -3,6 +3,7 @@ FROM resin/rpi-raspbian
 RUN apt-get update && apt-get install -y --no-install-recommends \
         build-essential \
         curl \
+		keras \
         libfreetype6-dev \
         libpng12-dev \
         libzmq3-dev \
